Fixed safari overflow hidden/border radius issue and added sth to media query

--- a/css/landscape-mobile.css
+++ b/css/landscape-mobile.css
@@ -63,6 +63,10 @@
         margin-right: auto;
     }
 
+    .nav-link.about {
+        padding: 0;
+    }
+
     .hamburger-container {
         display: block;
         width: 100%;
@@ -132,7 +136,7 @@
     .work-headline,
     .art-portfolio,
     .project-portfolio {
-        font-size: 2.25rem;
+        font-size: 2.5rem;
     }
 
     .what {
@@ -141,7 +145,7 @@
     }
 
     p {
-        font-size: 1rem;
+        font-size: 1.05rem;
     }
 
     .work-container {
